--- a/vlang/vlang.csproj
+++ b/vlang/vlang.csproj
@@ -44,6 +44,7 @@
     <Compile Include="AST\Elements\FunctionDefinition.cs" />
     <Compile Include="AST\Elements\Import.cs" />
     <Compile Include="AST\Elements\Mixin.cs" />
+    <Compile Include="AST\Elements\New.cs" />
     <Compile Include="AST\Elements\Using.cs" />
     <Compile Include="AST\Elements\Return.cs" />
     <Compile Include="AST\Elements\Value.cs" />
