--- a/vlang/vlang.csproj
+++ b/vlang/vlang.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="AST\ASTCreator.cs" />
     <Compile Include="AST\ASTNode.cs" />
+    <Compile Include="AST\Elements\VariableDeclaration.cs" />
     <Compile Include="AST\Elements\Loop.cs" />
     <Compile Include="AST\Elements\For.cs" />
     <Compile Include="AST\Elements\While.cs" />
@@ -62,13 +63,6 @@
     <Compile Include="Frontends\DefaultFrontend\DefaultFrontend.cs" />
     <Compile Include="Frontends\Frontend.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Runtime\ExecutionContext.cs" />
-    <Compile Include="Runtime\Function.cs" />
-    <Compile Include="Runtime\ICallable.cs" />
-    <Compile Include="Runtime\InteropManager.cs" />
-    <Compile Include="Runtime\Delegation.cs" />
-    <Compile Include="Runtime\ReflectionMethod.cs" />
-    <Compile Include="Runtime\Variable.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
