--- a/vlang/vlang.csproj
+++ b/vlang/vlang.csproj
@@ -61,7 +61,8 @@
     <Compile Include="AST\IASTElement.cs" />
     <Compile Include="Engine.cs" />
     <Compile Include="Frontends\DefaultFrontend\DefaultFrontend.cs" />
-    <Compile Include="Frontends\Frontend.cs" />
+    <Compile Include="IBackend.cs" />
+    <Compile Include="Frontends\IFrontend.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
